--- a/Privilegia/Views/Publicidad/CreatePublicidad.cshtml
+++ b/Privilegia/Views/Publicidad/CreatePublicidad.cshtml
@@ -163,6 +163,7 @@
         document.getElementById('Importe').value = "";
         document.getElementById('Descuento').value = "";
         document.getElementById('Total').value = "";
+        document.getElementById('PlanDeMedios').style.display = 'block';
 
         $("#fechaInicioDatePicker").datepicker({
             format: "dd/mm/yyyy",
