--- a/Privilegia/Views/Publicidad/EditarPublicidad.cshtml
+++ b/Privilegia/Views/Publicidad/EditarPublicidad.cshtml
@@ -160,9 +160,9 @@
 
     $('document').ready(function () {
 
-        document.getElementById('Importe').value = "";
-        document.getElementById('Descuento').value = "";
-        document.getElementById('Total').value = "";
+        //document.getElementById('Importe').value = "";
+        //document.getElementById('Descuento').value = "";
+        //document.getElementById('Total').value = "";
 
         $("#fechaInicioDatePicker").datepicker({
             format: "dd/mm/yyyy",
