--- a/Privilegia/Views/Shared/_NavBar.cshtml
+++ b/Privilegia/Views/Shared/_NavBar.cshtml
@@ -51,7 +51,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Ficheros <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a>Carga de Ficheros</a></li>
+                            <li><a href="/subidaArchivos">Subida Archivos</a></li>
                             <li><a>Incidencias</a></li>
                         </ul>
                     </li>
@@ -72,12 +72,14 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Informes <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a >Partners</a></li>
+                            <li><a href="/Informes/Publicidad">F. Publicidad</a></li>
                             <li><a>Producto</a></li>
                             <li><a>Premios por Producto</a></li>
                             <li><a>Premios por Mutualista</a></li>
                             <li><a>Operaciones</a></li>
                             <li><a>Comparativas</a></li>
                             <li><a>Comisiones</a></li>
+
                         </ul>
                     </li>
                 </ul>
