--- a/Privilegia/Views/PersonasDeContacto/CrearPersonaDeContacto.cshtml
+++ b/Privilegia/Views/PersonasDeContacto/CrearPersonaDeContacto.cshtml
@@ -18,7 +18,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control", @placeholder = "Introduzca el Nombre" } })
+                    @Html.TextBoxFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control", @placeholder = "Introduzca el Nombre" } })
                     @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -26,7 +26,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Apellidos, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Apellidos, new { htmlAttributes = new { @class = "form-control", @placeholder = "Introduzca los Apellidos" } })
+                    @Html.TextBoxFor(model => model.Apellidos, new { htmlAttributes = new { @class = "form-control", @placeholder = "Introduzca los Apellidos" } })
                     @Html.ValidationMessageFor(model => model.Apellidos, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -34,14 +34,14 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Telefono, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Telefono, new { htmlAttributes = new { @class = "form-control", @placeholder = "Introduzca el telefono" } })
+                    @Html.TextBoxFor(model => model.Telefono, new { htmlAttributes = new { @class = "form-control", @placeholder = "Introduzca el telefono" } })
                     @Html.ValidationMessageFor(model => model.Telefono, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="form-group">
                 @Html.LabelFor(model => model.Cargo, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Cargo, new { htmlAttributes = new { @class = "form-control", @placeholder = "Introduzca el Cargo" } })
+                    @Html.TextBoxFor(model => model.Cargo, new { htmlAttributes = new { @class = "form-control", @placeholder = "Introduzca el Cargo" } })
                     @Html.ValidationMessageFor(model => model.Cargo, "", new { @class = "text-danger" })
                 </div>
             </div>
