--- a/Privilegia/Views/Publicidad/Index.cshtml
+++ b/Privilegia/Views/Publicidad/Index.cshtml
@@ -85,8 +85,8 @@
                         { "sName": "NombreParteEspacioPublicidad" },
                         {
                             "sName": "PlanDeMedios",
-                            "render": function(data) {
-                                if (data) {
+                            "render": function (data) {
+                                if (data === "True" ) {
                                     return '<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>';
                                 } else {
                                     return '<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>';
@@ -105,7 +105,7 @@
 
                                 if (row[8] !== null) {
                                     //Tengo Factura
-                                    var urlFactura = '@Url.Action("VerFactura", "Informes")/' + row[7];
+                                    var urlFactura = '@Url.Action("VerFactura", "Informes")/' + row[8];
 
                                     return '<a href=\"' + urlVer + '\" class=\"btn btn-info btn-sm\"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a> ' +
                                            '<a href=\"' + urlEditar + '\" class=\"btn btn-success btn-sm\"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> ' +
