--- a/Privilegia/Views/Publicidad/CalendarioPublicidad.cshtml
+++ b/Privilegia/Views/Publicidad/CalendarioPublicidad.cshtml
@@ -39,7 +39,7 @@
             header: {
                 left: 'prev,next today',
                 center: 'title',
-                right: 'listYear,month,basicWeek,basicDay'
+                right: 'month,basicWeek,basicDay'
             },
             locale: 'es',
             navLinks: true, // can click day/week names to navigate views
