--- a/Privilegia/Views/Shared/_NavBar.cshtml
+++ b/Privilegia/Views/Shared/_NavBar.cshtml
@@ -52,7 +52,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Ficheros <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="/subidaArchivos">Subida Archivos</a></li>
-                            <li><a>Incidencias</a></li>
+                            <li><a href="/Incidencias">Incidencias</a></li>
                         </ul>
                     </li>
 
@@ -71,10 +71,10 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Informes <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a >Partners</a></li>
                             <li><a href="/Informes/Publicidad">F. Publicidad</a></li>
-                            <li><a>Producto</a></li>
-                            <li><a>Premios por Producto</a></li>
+                            <li><a href="/Informes/FacturasPremiosPartner">F. Premios</a></li>
+                            <li><a href="/Informes/InformePremiosPorPartner">Premios por Partner</a></li>
+                            <li><a href="/Informes/InformePremiosProductosPartner">Premios por Partner y Producto</a></li>
                             <li><a>Premios por Mutualista</a></li>
                             <li><a>Operaciones</a></li>
                             <li><a>Comparativas</a></li>
