--- a/Privilegia/Views/Partners/Index.cshtml
+++ b/Privilegia/Views/Partners/Index.cshtml
@@ -7,11 +7,12 @@
 <div class="row">
     <div class="col-md-12">
         <h2 align="center"><span class="glyphicon glyphicon-list"></span> Listado de Partners</h2>
-        <hr/>
+        <hr />
     </div>
 </div>
 <div class="row">
     <div class="col-md-12">
+
         @*<div class="row">
                 <div class="col-md-6">
                     <a class="btn btn-default pull-right" data-modal="" href="Partners/CreateInterno" id="btnCreateInterno">
@@ -23,24 +24,26 @@
             <div class="panel-heading">
                 <strong>Partners Internos</strong>
             </div>
-            <table id="Internos" class="display">
-                <thead>
-                    <tr>
-                        <th>Id</th>
-                        <th>Nombre</th>
-                        <th>Contacto</th>
-                        <th>Telefono</th>
-                        <th>Actividad</th>
-                        <th>Fecha de firma de acuerdo</th>
-                        <th>
-                            <div class="pull-right">
-                                @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'> Nuevo</span>", "Añadir Partner Interno", "CreateInterno", "Partners", routeValues: null, htmlAttributes: new { @class = "btn btn-primary" })
-                            </div>
-                        </th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
+            <div class="table-responsive">
+                <table id="Internos" class="table table-striped" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th>Id</th>
+                            <th>Nombre</th>
+                            <th>Contacto</th>
+                            <th>Telefono</th>
+                            <th>Actividad</th>
+                            <th>Fecha de firma de acuerdo</th>
+                            <th>
+                                <div class="pull-right">
+                                    @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'> </span>Nuevo", "Añadir Partner Interno", "CreateInterno", "Partners", routeValues: null, htmlAttributes: new { @class = "btn btn-primary" })
+                                </div>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
@@ -57,23 +60,25 @@
             <div class="panel-heading">
                 <strong>Partners Externos</strong>
             </div>
-            <table id="Externos" class="display">
-                <thead>
-                    <tr>
-                        <th>Id</th>
-                        <th>Nombre</th>
-                        <th>Tipo</th>
-                        <th>Fecha de firma de acuerdo</th>
-                        <th>
-                            <div class="pull-right">
-                                @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'> Nuevo</span>", "Añadir Partner Externo", "CreateExterno", "Partners", routeValues: null, htmlAttributes: new { @class = "btn btn-primary" })
-                            </div>
-                        </th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
-        </div>
+            <div class="table-responsive">
+                <table id="Externos" class="table table-striped" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th>Id</th>
+                            <th>Nombre</th>
+                            <th>Tipo</th>
+                            <th>Fecha de firma de acuerdo</th>
+                            <th>
+                                <div class="pull-right">
+                                    @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'> </span>Nuevo", "Añadir Partner Externo", "CreateExterno", "Partners", routeValues: null, htmlAttributes: new { @class = "btn btn-primary" })
+                                </div>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
+            </div>
     </div>
 </div>
 @section scripts
@@ -109,9 +114,9 @@
                                     var UrlEditar = '@Url.Action("EditarPartnerInterno", "Partners")/' + row[0];
                                     var UrlBorrar = '@Url.Action("Eliminar", "Partners")/' + row[0];
                                     var UrlVer = '@Url.Action("Detalles", "Partners")/' + row[0];
-                                    return '<a href=\"' + UrlVer + '\" class=\"btn btn-info btn-sm\"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a> ' +
-                                       '<a href=\"' + UrlEditar + '\" class=\"btn btn-success btn-sm\"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> ' +
-                                       '<a href=\"' + UrlBorrar + '\" class=\"btn btn-danger btn-sm\"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a> ';
+                                    return '<div class="pull-right"><a href=\"' + UrlVer + '\" class=\"btn btn-info\"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a> ' +
+                                       '<a href=\"' + UrlEditar + '\" class=\"btn btn-success \"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> ' +
+                                       '<a href=\"' + UrlBorrar + '\" class=\"btn btn-danger\"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></div> ';
 
                                 }
                             }
@@ -148,7 +153,7 @@
                         "bServerSide": true,
                         "sAjaxSource": "Partners/CargarProveedoresExternos",
                         "bProcessing": true,
-                        "bAutoWidth": false,
+                        "bAutoWidth": true,
                         "aoColumns": [
                             { "sName": "Id", "bVisible": false },
                             { "sName": "Nombre" },
@@ -161,9 +166,9 @@
                                     var UrlEditar = '@Url.Action("EditarPartnerExterno", "Partners")/' + row[0];
                                     var UrlBorrar = '@Url.Action("Eliminar", "Partners")/' + row[0];
                                     var UrlVer = '@Url.Action("Detalles", "Partners")/' + row[0];
-                                    return '<a href=\"' + UrlVer + '\" class=\"btn btn-info btn-sm\"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a> ' +
-                                      '<a href=\"' + UrlEditar + '\" class=\"btn btn-success btn-sm\"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> ' +
-                                      '<a href=\"' + UrlBorrar + '\" class=\"btn btn-danger btn-sm\"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a> ';
+                                    return '<div class="pull-right"><a href=\"' + UrlVer + '\" class=\"btn btn-info \"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a> ' +
+                                      '<a href=\"' + UrlEditar + '\" class=\"btn btn-success \"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> ' +
+                                      '<a href=\"' + UrlBorrar + '\" class=\"btn btn-danger \"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a> </div>';
                                 }
                             }
                             //"mRender": function (data, type, full) {
