--- a/Privilegia/Views/PersonasDeContacto/CrearPersonaDeContacto.cshtml
+++ b/Privilegia/Views/PersonasDeContacto/CrearPersonaDeContacto.cshtml
@@ -48,7 +48,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Principal, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.CheckBoxFor(model => model.Principal, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.CheckBoxFor(model => model.Principal, new { htmlAttributes = new { @class = "form-control" , @checked ="true" } })
                     @Html.ValidationMessageFor(model => model.Principal, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -63,4 +63,8 @@
 
 
 
-
+<script type="text/javascript">
+    $('document').ready(function () {
+        document.getElementById('Principal').style.display = 'block';
+    });
+</script>
