--- a/Privilegia/Views/PersonasDeContacto/EditarPersonaDeContacto.cshtml
+++ b/Privilegia/Views/PersonasDeContacto/EditarPersonaDeContacto.cshtml
@@ -61,7 +61,11 @@
     </div>
 }
 
+<script type="text/javascript">
+    $('document').ready(function () {
+
+        document.getElementById('Principal').style.display = 'block';
 
 
-
-
+    });
+</script>
