--- a/Privilegia/Views/PersonasDeContacto/Index.cshtml
+++ b/Privilegia/Views/PersonasDeContacto/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Privilegia.Helpers
 @model IEnumerable<Privilegia.Models.PersonaContactoModel>
 
-<div class="panel panel-default">
+<div class="panel panel-default table-responsive">
     <table class="table table-hover">
         <tr>
             <th>
@@ -20,7 +20,7 @@
                 @Html.DisplayNameFor(model => model.Principal)
             </th>
             <th>
-                @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'></span>", "Crear Contacto", "CrearPersonaDeContacto", "PersonasDeContacto", routeValues: new { idPartner = ViewBag.PartnerId }, htmlAttributes: new { data_modal = "", @class = "btn btn-primary pull-right personas" })
+                @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'></span> Nuevo", "Crear Contacto", "CrearPersonaDeContacto", "PersonasDeContacto", routeValues: new { idPartner = ViewBag.PartnerId }, htmlAttributes: new { data_modal = "", @class = "btn btn-primary pull-right personas" })
             </th>
         </tr>
 
