--- a/Privilegia/Views/Productos/Index.cshtml
+++ b/Privilegia/Views/Productos/Index.cshtml
@@ -31,8 +31,8 @@
 
 <div class="row">
     <div class="col-md-12">
-        <div class="panel panel-default">
-            <table id="Productos" class="display">
+        <div class="panel panel-default table-responsive">
+            <table id="Productos" class="table table-striped" cellspacing="0" width="100%">
                 <thead>
                 <tr>
                     <th>Id</th>
@@ -41,7 +41,7 @@
                     <th>Estado</th>
                     <th>
                         <div class="pull-right">
-                            @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'> Nuevo</span>", "Añadir Producto", "CreateProducto", "Productos", routeValues: null, htmlAttributes: new { @class = "btn btn-primary" })
+                            @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'></span>Nuevo", "Añadir Producto", "CreateProducto", "Productos", routeValues: null, htmlAttributes: new {@class = "btn btn-primary"})
                         </div>
                     </th>
                 </tr>
@@ -115,9 +115,9 @@
                                 var UrlEditar = '@Url.Action("EditarProducto", "Productos")/' + row[0];
                                 var UrlBorrar = '@Url.Action("EliminarProducto", "Productos")/' + row[0];
                                 var UrlVer = '@Url.Action("Detalles", "Productos")/' + row[0];
-                                return '<a href=\"' + UrlVer + '\" class=\"btn btn-info btn-sm\"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a> ' +
-                                      '<a href=\"' + UrlEditar + '\" class=\"btn btn-success btn-sm\"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> ' +
-                                      '<a href=\"' + UrlBorrar + '\" class=\"btn btn-danger btn-sm\"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a> ';
+                                return ' <div class="pull-right"><a href=\"' + UrlVer + '\" class=\"btn btn-info \"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a> ' +
+                                      '<a href=\"' + UrlEditar + '\" class=\"btn btn-success \"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> ' +
+                                      '<a href=\"' + UrlBorrar + '\" class=\"btn btn-danger \"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></div> ';
                             }
                         }
                     ],
