--- a/Privilegia/Views/Publicidad/Index.cshtml
+++ b/Privilegia/Views/Publicidad/Index.cshtml
@@ -10,7 +10,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-4">
         <label>Listado de Partners:</label>
         <select class="selectpicker" data-live-search="true" onchange="filterme()" multiple data-max-options="1" title="Selecciona un Partner...">
             @{
@@ -26,13 +26,17 @@
             }
         </select>
     </div>
+    <div class="col-md-5 text-center">
+    </div>
+    <div class="col-md-3">
+        <a class="btn btn-warning btn-block" href='@Url.Action("CalendarioPublicidad","Publicidad")'>Consultar Calendario <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span></a>
+    </div>
 </div>
-
-<div class="panel panel-default">
-    <div class="row">
-        <div class="col-md-12">
+<div class="row">
+    <div class="col-md-12">
+        <div class="panel panel-default">
             <div class="table-responsive">
-                <table id="Publicidad" class="display">
+                <table id="Publicidad" class="table table-striped" cellspacing="0" width="100%">
                     <thead>
                         <tr>
                             <th>Id</th>
@@ -42,26 +46,28 @@
                             <th>Soporte</th>
                             <th>Publicidad</th>
                             <th>Plan de Medios</th>
-                            <th>Total €</th>
+                            <th>Total</th>
                             <th>Factura</th>
                             <th>
                                 <div class="pull-right">
-                                    @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'> Nuevo</span>", "Añadir Producto", "CreatePublicidad", "Publicidad", routeValues: null, htmlAttributes: new { @class = "btn btn-primary" })
+                                    @Html.NoEncodeActionLink("<span class='glyphicon glyphicon-plus'></span>Nuevo", "Añadir Producto", "CreatePublicidad", "Publicidad", routeValues: null, htmlAttributes: new { @class = "btn btn-primary" })
                                 </div>
                             </th>
                         </tr>
                     </thead>
+                    <tfoot>
+                        <tr>
+                            <th colspan="7" style="text-align:right">Total:</th>
+                            <th></th>
+                        </tr>
+                    </tfoot>
                     <tbody></tbody>
                 </table>
             </div>
         </div>
     </div>
 </div>
-<div class="row">
-    <div class="col-md-12 text-center">
-        <a class="btn btn-warning" href='@Url.Action("CalendarioPublicidad","Publicidad")'>Consultar Calendario <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span></a>
-    </div>
-</div>
+
 @section scripts
 {
     @Scripts.Render("~/scripts/AppJs/Privilegia.js")
@@ -75,7 +81,7 @@
                     "bServerSide": true,
                     "sAjaxSource": "Publicidad/CargarPublicidad",
                     "bProcessing": true,
-                    "bAutoWidth": false,
+                    "bAutoWidth": true,
                     "aoColumns": [
                         { "sName": "Id", "bVisible": false, "bSearchable": false },
                         { "sName": "Partner.Nombre" },
@@ -86,7 +92,7 @@
                         {
                             "sName": "PlanDeMedios",
                             "render": function (data) {
-                                if (data === "True" ) {
+                                if (data === "True") {
                                     return '<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>';
                                 } else {
                                     return '<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>';
@@ -105,23 +111,44 @@
 
                                 if (row[8] !== null) {
                                     //Tengo Factura
-                                    var urlFactura = '@Url.Action("VerFactura", "Informes")/' + row[8];
+                                    var urlFactura = '@Url.Action("VerFacturaPublicidad", "Informes")/' + row[8];
 
-                                    return '<a href=\"' + urlVer + '\" class=\"btn btn-info btn-sm\"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a> ' +
-                                           '<a href=\"' + urlEditar + '\" class=\"btn btn-success btn-sm\"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> ' +
-                                           '<a href=\"' + urlFactura + '\" class=\"btn btn-default btn-sm\" target=\"_blank\"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></a> ';
+                                    return '<a href=\"' + urlVer + '\" class=\"btn btn-info\"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a> ' +
+                                           '<a href=\"' + urlEditar + '\" class=\"btn btn-success\"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> ' +
+                                           '<a href=\"' + urlFactura + '\" class=\"btn btn-default\" target=\"_blank\"><span class="glyphicon glyphicon-file" aria-hidden="true"></span></a> ';
                                 } else {
                                     //No tengo Factura
 
 
-                                    return '<a href=\"' + urlVer + '\" class=\"btn btn-info btn-sm\"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a> ' +
-                                           '<a href=\"' + urlEditar + '\" class=\"btn btn-success btn-sm\"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> ' +
-                                           '<a href=\"' + urlBorrar + '\" class=\"btn btn-danger btn-sm\"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a> ';
+                                    return '<a href=\"' + urlVer + '\" class=\"btn btn-info \"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a> ' +
+                                           '<a href=\"' + urlEditar + '\" class=\"btn btn-success \"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a> ' +
+                                           '<a href=\"' + urlBorrar + '\" class=\"btn btn-danger\"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a> ';
                                 }
 
                             }
                         }
                     ],
+                    "footerCallback": function (row, data, start, end, display) {
+                        var api = this.api(), data;
+
+                        // Remove the formatting to get integer data for summation
+                        var intVal = function (i) {
+                            return typeof i === 'string' ?
+                                i.replace(/[\$,]/g, '') * 1 :
+                                typeof i === 'number' ?
+                                i : 0;
+                        };
+
+                        // Total over all pages
+                        var total = api
+                            .column(7)
+                            .data()
+                            .reduce(function (a, b) {
+                                return intVal(a) + intVal(b);
+                            }, 0);
+                        // Update footer
+                        $(api.column(7).footer()).html(total + '€');
+                    },
                     "oLanguage": {
                         "sProcessing": "Procesando...",
                         "sLengthMenu": "Mostrar _MENU_ registros",
@@ -146,7 +173,9 @@
                             "sSortDescending": ": Activar para ordenar la columna de manera descendente"
                         }
                     }
-                });
+                }).yadcf([{
+                    column_number: 6
+                }]);
 
         });
 
@@ -165,6 +194,8 @@
 
         $(document).ready(function () {
 
+
+            console.log('@ViewBag.hola');
         });
 
     </script>
