--- a/Privilegia/Views/subidaArchivos/VerDatosArchivo.cshtml
+++ b/Privilegia/Views/subidaArchivos/VerDatosArchivo.cshtml
@@ -1,58 +1,216 @@
-﻿@using FileHelpers
-@model Privilegia.ViewModels.FicheroViewModel
+﻿@using Privilegia.Models
+@model List<Privilegia.Models.FacturacionPremiosModel>
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    @Html.HiddenFor(m => m.ContenidoArchivo)
-    <h2><span class="glyphicon glyphicon-file" aria-hidden="true"></span> Subida de Ficheros</h2>
+@{
+    @*@Html.HiddenFor(m => m.ContenidoArchivo)*@
+    <h2><span class="glyphicon glyphicon-file" aria-hidden="true"></span> Subida de Ficheros </h2>
     <hr />
 
-    var registrosTotales = Model.RegistrosCorrectos + Model.Errores.Count;
+    var registrosTotales = Model.Count;
 
-    <h2>Registros procesados @Model.RegistrosCorrectos de @registrosTotales </h2>
-    <div class="panel">
-        <div class="panel-heading">
-            Errores Encontrados
+
+    <div class="row">
+        <div class="col-md-7">
+            <h3>Partner: @ViewBag.Nombre</h3>
+            @{
+
+                if (Model.Count == 0)
+                {
+                    <h2>@Model.Count Registros correctos, estos registros ya estaban procesados anteriormente.</h2>
+                }
+            }
         </div>
-        <div class="row">
-            <div class="col-md-12">
+        <div class="col-md-2">
+            <a class="btn btn-warning btn-block" id="botoncrearfactura" onclick="crearFactura();">Generar Factura<span class="glyphicon glyphicon-calendar" aria-hidden="true"></span></a>
+        </div>
+        <div class="col-md-3">
+            <a href="/subidaArchivos" type="button" class="btn btn-primary btn-block">
+                <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> Cargar Nuevo Archivo
+            </a>
 
-                <table class="table table-hover">
+        </div>
+    </div>
+
+if (Model.Count > 0)
+{
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel">
+                <div class="panel-heading">
+                    @*<h3>Registros procesados:  @Model.RegistrosCorrectos de @registrosTotales</h3>*@
+                </div>
+
+                <table class="table table-hover desborde_tabla">
                     <thead>
                         <tr>
-                            <th>Estado</th>
-                            <th>Linea</th>
-                            <th>Descripción error</th>
+                            <th></th>
+                            <th>Nif Proveed</th>
+                            <th>Codigo Cliente</th>
+                            <th>Numero Pedido</th>
+                            <th>Fecha Contratacion</th>
+                            <th>Importe Pago</th>
+                            <th>Valor</th>
+                            <th>Numero Mutualista</th>
                         </tr>
                     </thead>
                     <tbody>
-
-                        @foreach (ErrorInfo t in Model.Errores)
+                        @foreach (FacturacionPremiosModel t in Model)
                         {
                             <tr>
-                                <td><span class="glyphicon glyphicon-warning-sign"></span></td>
+                                <td><span class="glyphicon glyphicon-floppy-saved"></span></td>
                                 <td>
-                                    @t.LineNumber
+                                    @t.NifProveed
                                 </td>
                                 <td>
-                                    @t.ExceptionInfo.Message
+                                    @t.CodigoCliente
+                                </td>
+                                <td>
+                                    @t.NumeroPedido
+                                </td>
+                                <td>
+                                    @t.FechaContratacion
+                                </td>
+                                <td>
+                                    @t.ImportePago €
+                                </td>
+                                <td>
+                                    @t.Valor €
+                                </td>
+                                <td>
+                                    @t.NumeroMutualista
                                 </td>
                             </tr>
                         }
-
                     </tbody>
                 </table>
             </div>
         </div>
     </div>
+    }
+
+
 }
 @section scripts
 {
     <script type="text/javascript">
-        $(document)
-            .ready(function () {
+        function crearFactura() {
+            //Convertimos el objeto a JSON
+            var jsonObject = '@Html.Raw(Json.Encode(Model))';
 
+
+            swal({
+                title: 'Estas seguro?',
+                text: "Vamos a crear la factura. \n Recuerde que no será modificable",
+                type: 'warning',
+                showCancelButton: true,
+                confirmButtonText: 'Si',
+                cancelButtonText: 'No'
+            })
+                .then(function() {
+                    var notify = $.notify('<strong>Cargando</strong> No cierres esta ventana...',
+                    {
+                        type: 'danger',
+                        allow_dismiss: false,
+                        showProgressbar: true,
+                        offset: {
+                            y: 100
+                        },
+                        placement: {
+                            from: "bottom",
+                            align: "center"
+                        }
+
+                    });
+
+                    setTimeout(function() {
+                        notify.update('message', '<strong>Leyendo registros...</strong>');
+                    },
+                        2000);
+
+                    setTimeout(function() {
+                        notify.update('message', '<strong>Creando factura...</strong>');
+                    },
+                        3000);
+
+                    setTimeout(function() {
+                        notify.update('message', '<strong>Creando factura...</strong>');
+                    },
+                        4000);
+
+                    setTimeout(function() {
+                        notify.update('message', '<strong>Finalizando...</strong>');
+                        $.ajax({
+                        url: "/SubidaArchivos/CrearFacturaPremios",
+                            type: "POST",
+                            data: jsonObject,
+                            contentType: "application/json; charset=utf-8",
+                            dataType: "json",
+                            success: function(response) {
+                                if (response != null && response.success) {
+                                    $('#botoncrearfactura').hide();
+                                    var urlFactura = '@Url.Action("VerFacturaPublicidad", "Informes")/' +
+                                            response.idFactura;
+                                    swal({
+                                        title: 'Factura creada correctamente!',
+                                        html:
+                                            '<label>Puede consultar la factura <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></label><a href=\"' + urlFactura + '\" class=\"btn btn-success btn-sm\" target=\"_blank\"><span class="glyphicon glyphicon-file" aria-hidden="true"> Factura</span></a> ',
+                                        type: 'success',
+                                        timer: 5000
+                                    });
+                                } else {
+                                    swal({
+                                        title: 'Algo no fue bien',
+                                        text: 'Vuelva a intentarlo',
+                                        type: 'error',
+                                        timer: 2000
+                                    });
+                                }
+
+                            }
+                        });
+                    },
+                        4000);
+                    //do something
+
+                },
+                    function(dismiss) {
+                        // dismiss can be 'cancel', 'overlay',
+                        // 'close', and 'timer'
+                        if (dismiss === 'cancel') {
+
+                        }
+                    });
+        };
+
+        function cargarNotificaciones() {
+            if (@Model.Count() !== 0) {
+                $.notify({
+                    icon: 'glyphicon glyphicon-ok',
+                    title: 'Enhorabuena',
+                    message: 'Cargados <strong>@Model.Count() registros</strong> correctamente.',
+                    newest_on_top: true
+                },
+                    {
+                        type: 'success',
+                        animate: {
+                            enter: 'animated flipInY',
+                            exit: 'animated flipOutX'
+                        }
+                    });
+            }
+
+        }
+
+        $(document)
+            .ready(function() {
+                if (@Model.Count === 0) {
+                    $('#botoncrearfactura').hide();
+                }
+
+                cargarNotificaciones();
+
+                //window.history.pushState("object or string", "Title", "/SubidaArchivos/CargarArchivo");
             });
+
     </script>
 }
